--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /*  your css code here. If applicable */
+div{
+	width:200px;
+	height:200px;
+	position:absolute;
+	left:50%;
+	top:50%;
+	background-color:lightblue;
+	border:2px solid black;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	color:purple;
+}
