--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,15 @@
 /*  your css code here. If applicable */
-body,html{
-	height:100%;
-	margin:0;
-}
 #box{
 	width:200px;
 	height:200px;
-	background-color:lightblue;
-	border:2px solid black;
 	display:flex;
 	justify-content:center;
 	align-items:center;
 	color:purple;
-}
-#container{
-	height:100vh;
-	display:flex;
-	justify-content:center;
-	align-items:center;
+	position:absolute;
+	background-color:lightblue;
+	border:2px solid black;
+	transform: translate(-50%, -50%);
+	left:50%;
+	top:50%;
 }
