--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 /*  your css code here. If applicable */
-#box{
-	width:200px;
-	height:200px;
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	color:purple;
-	position:absolute;
-	background-color:lightblue;
-	border:2px solid black;
-	transform: translate(-50%, -50%);
-	left:50%;
-	top:50%;
+div {
+    position: absolute; 
+    left: 50%;
+    top: 50%;
+    width: 200px;
+    height: 200px;
+    border: 2px solid black;
+    background-color: lightblue;
+    transform: translate(-50%, -50%);
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    color: purple; 
 }
